新增：补齐教室申请建表与撤回接口，师生端新接口对齐 main 的 RESTful 风格
合并 main 后按其新风格重写上一轮新增的接口：GET /api/teachers?teacherNo=（原 /by-no/{teacherNo}）、GET /api/teachers/{id}/classes 与 /{id}/courses（原 /my-classes、/my-courses）；教学任务控制器改为 /api/teaching-tasks（query 过滤 + RESTful CRUD）。

补上遗漏的 classroom_apply 建表脚本：队友的教室申请代码齐全，但 schema.sql 里没有这张表，一跑就报表不存在；同时补种子数据并在 数据库设计.md 登记。

教室申请接口修正：申请人强制以当前登录人为准（原来信任请求体，既可冒名提交，又因 applicant NOT NULL 直接插入失败）；approve 补 PreAuthorize hasRole ADMIN；approve/reject 增加仅待审核可审批校验（原来可重复审批）；GET 列表的 status 过滤生效；新增 PUT /{id}/cancel 撤回（仅本人、仅待审核）。

验证：mvn -DskipTests compile BUILD SUCCESS（153 个源文件）。